--- a/AmIDone_visualiser/css/index.css
+++ b/AmIDone_visualiser/css/index.css
@@ -13,3 +13,14 @@ body {
 .input-group{
     padding-top: 10px !important;
 }
+
+
+.inputContainer {
+    text-align:center;
+    position: fixed;
+    top: 2%;
+    right:4%;
+    left:4%;
+    background-color:#ffffff;
+    border-radius:4px;
+}
