Index.html ended

--- a/AmIDone_visualiser/css/common.css
+++ b/AmIDone_visualiser/css/common.css
@@ -2,6 +2,14 @@
     background-color: #ff9933;
 }
 
+.coolGrey{
+    background-color : rgba(165, 165, 165, 0.39);
+}
+
+.coolGrey2{
+    background-color : #e7e7e7;
+}
+
 .inputContainer {
     text-align: center;
     position: fixed;
@@ -24,4 +32,17 @@
 
 .btn-warning {
     border-color: #ff9933 !important;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #e7e7e7;
+}
+
+.container .text-muted {
+    margin: 20px 0;
+    text-align: center;
 }
