--- a/AmIDone_visualiser/customerView/css/customerView.css
+++ b/AmIDone_visualiser/customerView/css/customerView.css
@@ -6,3 +6,26 @@ html, body, .container {
     width: 100%;
     height: 300px;
 }
+
+.progressDrone {
+    overflow: visible !important;
+}
+
+.progressbarDrone {
+    float: left;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.droneCursor {
+    height: 50px;
+}
+
+.droneDiv {
+    overflow-x: hidden;
+    position: relative;
+    bottom: 15px;
+    height: 50px;
+    right: 25px;
+}
